修改编码错误
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3636 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/java/corner/orm/tapestry/component/prototype/window/VersionCommentBox.html
+++ b/src/main/java/corner/orm/tapestry/component/prototype/window/VersionCommentBox.html
@@ -4,7 +4,7 @@
 			<td width="100%">
 				<input type="checkbox" jwcid="svnCommit@Checkbox" value="ognl:svnCommit" />
 				<span jwcid="WindowQueryDialogField"></span>
-                <input type="Hidden" jwcid="svnAuthor@Hidden" value="ognl:svnAuthorValue" />
+                <input type="Hidden" jwcid="svnAuthor@Hidden" value="ognl:svnAuthor" />
                 <input type="Hidden" jwcid="svnLog@Hidden" value="ognl:svnLog" />
 			</td>
 		</tr>
