增加hidden组建，可以定义初始化值
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3641 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/widget/QueryDialogTest.page
+++ b/src/main/webapp/widget/QueryDialogTest.page
@@ -25,8 +25,9 @@
   </component>
   <component type="corner:VersionCommentBox" id="popText">
       <binding value="literal:widget/pop" name="queryPageName"/>
-      <binding value="ognl:svnAuthorValue" name="svnAuthorValue"/>
+      <binding value="ognl:svnAuthorValue" name="svnAuthor"/>
       <binding value="ognl:svnLog" name="svnLog"/>
       <binding value="ognl:svnCommit" name="svnCommit"/>
+      <binding value="literal:admin" name="svnAuthorDefaultValue"/>
   </component>
 </page-specification>
