svn增加css显示对用户进行提示
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3649 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/css/sandbox.css
+++ b/src/main/webapp/css/sandbox.css
@@ -5,6 +5,8 @@
 @import url("windowThemes/default.css");
 @import url("windowThemes/alphacube.css");
 
+@import url("svn.css");
+
 .alertButton {
 	width: auto;
 	border: none;
