版本控制js和css最终版
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3655 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/css/svn.css
+++ b/src/main/webapp/css/svn.css
@@ -1,7 +1,7 @@
 /* Colors for change types */
 #chglist .edit, #overview .mod, .diff #legend .mod { background: #fd8 }
 #chglist .add, #overview .add, .diff #legend .add { background: #bfb }
-#chglist .copy, #overview .cp, .diff #legend .cp { background: #88f }
+#chglist .copy, #overview .cp, .diff #legend .cp { background: #FF3E3E }
 
 /* Legend for diff colors */
 .diff #legend {
