--- a/src/main/webapp/css/svn.css
+++ b/src/main/webapp/css/svn.css
@@ -34,3 +34,7 @@
 .view {}
 .view del {text-decoration:none;background: #FF3E3E}
 .view ins {text-decoration:none;background: #bfb}
+
+.button{
+  BORDER-RIGHT: #002D96 1px solid; PADDING-RIGHT: 2px; BORDER-TOP: #002D96 1px solid; PADDING-LEFT: 2px; FONT-SIZE: 12px; FILTER: progid:DXImageTransform.Microsoft.Gradient(GradientType=0, StartColorStr=#FFFFFF, EndColorStr=#9DBCEA); BORDER-LEFT: #002D96 1px solid; CURSOR: hand; COLOR: black; PADDING-TOP: 2px; BORDER-BOTTOM: #002D96 1px solid
+}
