--- a/src/main/webapp/widget/tree.page
+++ b/src/main/webapp/widget/tree.page
@@ -3,5 +3,6 @@
 
 <page-specification class="org.apache.tapestry.html.BasePage">
   <component type="corner:LeftTree" id="tree">
+  	<binding name="queryClassName" value="literal:corner.demo.model.one.A"/>
   </component>
 </page-specification>
