不使用PageServiceLink全部使用DirectServiceLink传递参数
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3734 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/widget/QueryDialogTest.page
+++ b/src/main/webapp/widget/QueryDialogTest.page
@@ -20,8 +20,8 @@
 	<binding value="literal:selectRecord" name="onSelectFunName"/>
     <binding value="literal:google" name="title"/>
   </component>
-  <component type="corner:PageQueryDialog" id="dialog2">
-	  <binding value="literal:widget/SelectionListPage" name="queryPageName"/>
+  <component type="corner:WindowQueryDialog" id="dialog2">
+	  <binding value="literal:widget/WinSelectionListPage" name="queryPageName"/>
   </component>
   <component type="corner:VersionCommentBox" id="popText">
       <binding value="literal:widget/pop" name="queryPageName"/>
