初步完成树展示的样式
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3738 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/css/tree.css
+++ b/src/main/webapp/css/tree.css
@@ -6,28 +6,29 @@ div.treenode {
 	padding-left: 16px;
 }
 span.mark {
-	background-color: #efe;
 	float: left;
-	margin: 0px 3px 0px 3px;
+	margin: 0px 10px 0px 3px;
 	padding: 0px;
 	text-align: center;
-	width: 15px;
+	width: 30px;
+    text-indent:10em;
 }
-.expanded:before {content: "-";}
-.collapsed:before {content: "+";}
-.leaf:before {content: " ";}
+.expanded {background:url(tree/opened.gif) no-repeat 0 1px;}
+.collapsed {background:url(tree/closed.gif) no-repeat 0 1px;}
+.leaf {background:url(tree/child.gif) no-repeat 13px 2px;}
 span.treedata {
-	background-color: #F0F0EE;
+	background-color: blue;
+    border:1px;
 }
 dl {
 	margin: 0px;
 }
 dt {
-	background-color: #ffe;
+	
 	float: left;
 	width: 300px;
 }
 dd {
-	background-color: #eff;
+	
 	text-align: right;
 }
