修改tree css目录结构，加入依赖传递到组建
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3741 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/css/sandbox.css
+++ b/src/main/webapp/css/sandbox.css
@@ -6,7 +6,7 @@
 @import url("windowThemes/alphacube.css");
 
 @import url("svn.css");
-@import url("tree.css");
+@import url("tree/default.css");
 
 .alertButton {
 	width: auto;
