--- a/src/main/java/corner/orm/tapestry/component/insert/VersionDownLoadFile.html
+++ b/src/main/java/corner/orm/tapestry/component/insert/VersionDownLoadFile.html
@@ -1,7 +1,12 @@
 <span jwcid="$content$">
 <table width="100%" cellspacing="0" cellpadding="0" border="0">
   <tr>
-    <td width="100%"><a id="ver_download">link1</a><br><a id="otherVer_download">link2</a></td>
+    <td width="100%">
+    	<a id="ver_download"><span jwcid="@Insert" value="ognl:link1" /></a>&nbsp;&nbsp;
+		<span jwcid="@If" renderTag="ognl:false" condition="ognl:showButton">
+		    <a id="otherVer_download"><span jwcid="@Insert" value="ognl:link2" /></a>
+		</span>
+	</td>
   </tr>
 </table>
 </span>
