完善svn文件下载显示功能
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3815 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/java/corner/orm/tapestry/component/insert/VersionDownLoadFile.html
+++ b/src/main/java/corner/orm/tapestry/component/insert/VersionDownLoadFile.html
@@ -2,9 +2,9 @@
 <table width="100%" cellspacing="0" cellpadding="0" border="0">
   <tr>
     <td width="100%">
-    	<a id="ver_download"><span jwcid="@Insert" value="ognl:link1" /></a>&nbsp;&nbsp;
+    	<a id="ver_download"><span jwcid="@Any" id="ver_download_show" /></a>&nbsp;&nbsp;
 		<span jwcid="@If" renderTag="ognl:false" condition="ognl:showButton">
-		    <a id="otherVer_download"><span jwcid="@Insert" value="ognl:link2" /></a>
+		    <a id="otherVer_download"><span jwcid="@Any" id="otherVer_download_show" /></a>
 		</span>
 	</td>
   </tr>
