增加ajaxio css 删除不必要的js，解决和dojo的冲突
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3831 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/css/sandbox.css
+++ b/src/main/webapp/css/sandbox.css
@@ -8,6 +8,8 @@
 @import url("svn.css");
 @import url("tree/default.css");
 
+@import url("ajaxio.css");
+
 .alertButton {
 	width: auto;
 	border: none;
