增加uploadbox ie7测试
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3890 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/upload/APersonForm.page
+++ b/src/main/webapp/upload/APersonForm.page
@@ -25,7 +25,7 @@
     <binding name="uploadFile" value="uploadFile"/>
     <binding name="blobEntity" value="entity"/>
     <binding name="editBlob" value="editBlob"/>
-    <binding name="imageFile" value="false"/>
+    <binding name="imageFile" value="true"/>
     <!--binding name="fileValidators" value="validators:required"/>
     <binding name="fileValidators" value="validators:pictureSize={10:10},fileType={.exe;.jpg}"/>
     <binding name="fileInputClass" value="literal:input-form-99" />
