完成windowDialog弹出功能
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@3987 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/widget/QueryDialogTest.page
+++ b/src/main/webapp/widget/QueryDialogTest.page
@@ -19,6 +19,8 @@
 	<binding value="listener:doWinPopQueryPage" name="listener"/>
 	<binding value="literal:selectRecord" name="onSelectFunName"/>
     <binding value="literal:google" name="title"/>
+    <binding name="showCleanDiv" value="ognl:true" />
+    <binding name="showCleanDivClass" value="literal:popMenuDiv" />
   </component>
   <component type="corner:WindowQueryDialog" id="dialog2">
 	  <binding value="literal:widget/WinSelectionListPage" name="queryPageName"/>
