增加左树dl和dt样式
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@4011 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/css/tree/default.css
+++ b/src/main/webapp/css/tree/default.css
@@ -21,15 +21,11 @@ span.treedata {
 	background-color: blue;
     border:1px;
 }
-dl {
+.treeDl {
 	margin: 0px;
 }
-dt {
-	
+.treeDt {
 	float: left;
 	width: 300px;
-}
-dd {
-	
-	text-align: right;
+	vertical-align: sub;
 }
