增加了确是的图片，修正了返回跳转的错误
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@4028 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/palette/PaletteResults.page
+++ b/src/main/webapp/palette/PaletteResults.page
@@ -27,11 +27,8 @@
   </component>
      
   <component id="backRollover" type="Rollover">
-    <binding name="image" value="asset:back"/>
-    <binding name="mouseOver" value="asset:backFocus"/>
+    <binding name="image" value="asset:backImage"/>
+    <binding name="mouseOver" value="asset:backFocusImage"/>
   </component>
-  
-  <asset name="back" path="images/Back.gif"/>
-  <asset name="backFocus" path="images/Back-focus.gif"/>
   
 </page-specification>
