修改uploadbox组件名称
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@4037 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/java/corner/orm/tapestry/component/uploadBox/UploadBox.html
+++ b/src/main/java/corner/orm/tapestry/component/uploadBox/UploadBox.html
@@ -3,7 +3,7 @@
 		<tr>
 			<td width="5%"><input type="checkbox" name="Input" jwcid="isEditBlobField" /></td>
 			<td>
-				<input type="file" name="blobData" jwcid="blobDataField"  />
+				<input type="file" name="blobData" jwcid="blobDataField_update"  />
 			</td>
 		</tr>
 		<tr>
