增加了常用的日期类型的Translator
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@4038 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/palette/Palette.page
+++ b/src/main/webapp/palette/Palette.page
@@ -62,6 +62,22 @@
   	<binding name="image" value="continueImage"/>
   </component>
 
+  <!-- GTimePicker -->
+  <!--
+  <component type="GTimePicker" id="timePickerField">
+    <binding name="displayName" value="literal:timePicker"/>
+    <binding name="value" value="ognl:currentTime"/>
+    <binding name="validators" value="validators:required"/>
+  </component>
+  -->
+  <component type="corner:CoolestPicker" id="coolestPickerField">
+	<binding name="displayName" value="message:coolestPicker" />
+	<binding name="translator" value="translator:timedate"/>
+	<binding name="ifFormat" value="literal:%H:%M:%S"/>
+	<binding name="showsTime" value="literal:true"/>
+	<binding name="timeFormat" value="literal:24"/>
+	<binding name="value" value="ognl:currentTime"/>
+  </component>
   
 </page-specification>
 
