增加了piano中对日期的绑定前缀date:
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@4093 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/palette/Palette.page
+++ b/src/main/webapp/palette/Palette.page
@@ -54,6 +54,20 @@
   	<binding name="image" value="continueImage"/>
   </component>
 
-  
+<component type="corner:CoolestPicker" id="regDateField">
+
+    <binding name="displayName" value="message:regDate"/>
+
+    <binding name="translator" value="translator:exactdate"/>
+
+    <binding name="ifFormat" value="literal:%Y-%m-%d %H:%M:%S"/>
+
+    <binding name="showsTime" value="literal:true"/>
+
+    <binding name="timeFormat" value="literal:24"/>
+
+    <binding name="value" value="ognl:regDate"/>
+
+  </component>
 </page-specification>
 
