预览静态页面
git-svn-id: http://dev.bjmaxinfo.com/svn/corner/trunk/corner@4120 bda6c913-8cf9-0310-89cc-b5856a464ced

--- a/src/main/webapp/css/sandbox.css
+++ b/src/main/webapp/css/sandbox.css
@@ -9,7 +9,7 @@
 @import url("tree/default.css");
 
 @import url("ajaxio.css");
-
+@import url("preview.css");
 .alertButton {
 	width: auto;
 	border: none;
