--- a/src/main/webapp/gainPoint/gainPointForm.page
+++ b/src/main/webapp/gainPoint/gainPointForm.page
@@ -27,10 +27,18 @@
     <binding name="labelFields" value="literal:name"/>
     <binding value="ognl:entity.sex" name="value"/>
   </component>
+  <component type="corner:AutoEva" id="addressField1">
+    <binding value="message:name" name="displayName"/>
+    <binding name="queryClassName" value="literal:corner.demo.model.one.A"/>
+    <binding name="template" value="literal:&lt;span class=&quot;selectme&quot;&gt;%1$s&lt;/span&gt;"/>
+    <binding name="labelFields" value="literal:name"/>
+    <binding value="ognl:entity.sex" name="value"/>
+  </component>
   <component type="corner:GainPoint" id="GainPointField">
     <binding value="literal:poid,name,cnName,address" name="showPropertys"/>
     <binding value="literal:corner.demo.model.one2many.B" name="entityClass"/>
     <binding value="literal:t" name="tableId"/>
+    <binding name="initFuns" value="literal:{&quot;address&quot;:&quot;autoEva&quot;}"/>
     <binding value="source" name="source"/>
   </component>
 </page-specification>
