--- a/src/main/java/corner/orm/tapestry/component/matrix/MatrixRowField.html
+++ b/src/main/java/corner/orm/tapestry/component/matrix/MatrixRowField.html
@@ -1,8 +1,8 @@
 <span jwcid="$content$">
 	<table width="100%" border="0" cellspacing="0" cellpadding="0">
 		<tr>
-		<span jwcid="@For" source="ognl:refVector" value="ognl:tmpObj" >
-			<td jwcid="@Any" class="ognl:tdClass"><input   jwcid="elementTextField" /></td>
+		<span jwcid="forComponentField">
+			<td jwcid="anyComponentField"><input jwcid="elementTextField" /></td>
 		</span>
 	</tr>
 </table>
