--- a/src/main/java/corner/orm/tapestry/component/insert/VersionManage.html
+++ b/src/main/java/corner/orm/tapestry/component/insert/VersionManage.html
@@ -1,7 +1,4 @@
 <span jwcid="$content$">
-<table width="100%" cellspacing="0" cellpadding="0" border="0">
-  <tr>
-    <td>
     	<span class="diff">
         	<span id="legend">
         		<dl><dd><span jwcid="@Any" id="ver_showInfo"></span></dd></dl>
@@ -10,14 +7,13 @@
                 <dt class="cp"></dt><dd>Delete</dd>
         	</span>
         </span>
-        <span jwcid="@If" renderTag="ognl:false" condition="ognl:showButton">
-    	<input class="svnbutton" type="button" id="showside" onClick="VersionInserts.resetTips();" jwcid="@Any" value="ognl:showside"/>
-        	&nbsp;&nbsp;
-        <input class="svnbutton" type="button" id="showLine" onClick="VersionInserts.closeTips();" jwcid="@Any" value="ognl:showLine"/>
-        </span>
-    </td>
-  </tr>
-</table>
+        <div class="svnRightDiv">
+        	<span jwcid="@If" renderTag="ognl:false" condition="ognl:showButton">
+                <input class="svnbutton" type="button" id="showside" onClick="VersionInserts.resetTips();" jwcid="@Any" value="ognl:showside"/>
+                    &nbsp;&nbsp;
+                <input class="svnbutton" type="button" id="showLine" onClick="VersionInserts.closeTips();" jwcid="@Any" value="ognl:showLine"/>
+            </span>
+        </div>
 <input type="hidden" id="ver_hid"/>
 <input type="hidden" id="otherVer_hid"/>
 </span>
