--- a/src/main/webapp/css/svn.css
+++ b/src/main/webapp/css/svn.css
@@ -38,3 +38,10 @@
 .svnbutton{
   BORDER-RIGHT: #002D96 1px solid; PADDING-RIGHT: 2px; BORDER-TOP: #002D96 1px solid; PADDING-LEFT: 2px; FONT-SIZE: 12px; FILTER: progid:DXImageTransform.Microsoft.Gradient(GradientType=0, StartColorStr=#FFFFFF, EndColorStr=#9DBCEA); BORDER-LEFT: #002D96 1px solid; CURSOR: hand; COLOR: black; PADDING-TOP: 2px; BORDER-BOTTOM: #002D96 1px solid
 }
+
+/* 右侧层 */
+.svnRightDiv{
+	position:absolute;
+	top:-1px;
+	right:0px;
+}
